--- a/challenger/src/App.css
+++ b/challenger/src/App.css
@@ -1,8 +1,5 @@
 .App {
   text-align: center;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-logo {
@@ -38,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body{
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
