--- a/challenger/src/components/car.module.css
+++ b/challenger/src/components/car.module.css
@@ -1,4 +1,13 @@
 .my_cars{
+    display: block;
+    margin: auto;
+    height: 300px;
+    width: 300px;
+    
+   
     background-color: black;
     color: gold;
+    
+    border-radius: 15px;
+    border: 1px solid red;
 }
